# XFDTD

./: .clang-tidy  .gitignore  CMakeLists.txt  readme.md  run_all_examples.sh
cmake/: FindFFTW.cmake  XFDTDConfig.cmake.in
examples/: 2d_cylinder_scatter.cpp  3d_diel_sphere_scatter.cpp  3d_pec_sphere_bistatic_rcs.cpp  3d_pec_sphere_monostatic_rcs.cpp  CMakeLists.txt  basic_lumped_element.cpp  capacitor.cpp  helper.h  inductor.cpp  rlc_circuit.cpp  s_parameter_network.cpp  thin_wire.cpp
output/: untitled.m
src/: CMakeLists.txt
src/additive_source/: CMakeLists.txt  hard_point_source.cpp  source.cpp
src/boundary/: CMakeLists.txt  boundary.cpp  perfect_match_layer.cpp
src/electromagnetic_field/: CMakeLists.txt  electromagnetic_field.cpp  linear_interpolation_emf.cpp
src/fdtd_basic_coff/: CMakeLists.txt  fdtd_basic_coff.cpp
src/flux/: flux.cpp
src/grid/: CMakeLists.txt  grid.cpp  grid_box.cpp  grid_space.cpp  subregion.cpp
src/include/: electromagnetic.h
src/include/additive_source/: hard_point_source.h  source.h
src/include/boundary/: boundary.h  perfect_match_layer.h
src/include/electromagnetic_field/: electromagnetic_field.h
src/include/fdtd_basic_coff/: fdtd_basic_coff.h
src/include/flux/: flux.h
src/include/grid/: grid.h  grid_box.h  grid_space.h  subregion.h
src/include/lumped_element/: capacitor.h  current_source.h  inductor.h  lumped_element.h  resistor.h  voltage_source.h
src/include/material/: dispersive_material.h  material.h
src/include/mesh/: grid_box.h
src/include/monitor/: current_monitor.h  field_monitor.h  monitor.h  movie_monitor.h  voltage_monitor.h
src/include/network/: network.h  port.h
src/include/nffft/: nffft.h  nffft_2d_test.h  nffft_broadband.h  nffft_fd.h
src/include/object/: object.h  object_plane.h  thin_wire.h
src/include/object/thin_wire/: thin_wire.h
src/include/shape/: cube.h  curve.h  cylinder.h  line.h  shape.h  sphere.h
src/include/simulation/: simulation.h  yee_cell.h
src/include/tfsf/: exmaple_tfsf.h  tfsf.h  tfsf_1d.h  tfsf_2d.h  tfsf_3d.h  total_field_scatter_field.h
src/include/tfsf/archive/: old_tfsf.h  old_tfsf_2d.h  tfsf_1d.h  tfsf_2d.h
src/include/util/: constant.h  dft.h  float_compare.h  type_define.h
src/include/waveform/: cosine_modulated_gaussian_waveform.h  custom_waveform.h  gaussian_waveform.h  sinusoidal_waveform.h  waveform.h
src/lumped_element/: CMakeLists.txt  capacitor.cpp  current_source.cpp  inductor.cpp  lumped_element.cpp  resistor.cpp  voltage_source.cpp
src/material/: CMakeLists.txt  CMakelists.txt  dispersive_material.cpp  material.cpp
src/mesh/: CMakeLists.txt  grid_box.cpp
src/monitor/: CMakeLists.txt  current_monitor.cpp  field_monitor.cpp  monitor.cpp  movie_monitor.cpp  voltage_monitor.cpp
src/network/: CMakeLists.txt  network.cpp  port.cpp
src/nffft/: CMakeLists.txt  nffft.cpp  nffft_2d_test.cpp  nffft_broadband.cpp  nffft_fd.cpp
src/object/: CMakeLists.txt  object.cpp  object_plane.cpp  thin_wire.cpp
src/object/thin_wire/: CMakeLists.txt  thin_wire.cpp
src/shape/: CMakeLists.txt  cube.cpp  cylinder.cpp  line.cpp  shape.cpp  sphere.cpp
src/simulation/: CMakeLists.txt  simulation.cpp  simulation_init.cpp  simulation_update.cpp  yee_cell.cpp
src/tfsf/: CMakeLists.txt  exmaple_tfsf.cpp  tfsf.cpp  tfsf_1d.cpp  tfsf_2d.cpp  tfsf_3d.cpp
src/tfsf/archive/: exmaple_tfsf.cpp  old_tfsf.cpp  old_tfsf_2d.cpp  tfsf_1d.cpp  tfsf_2d.cpp
src/waveform/: CMakeLists.txt  cosine_modulated_gaussian_waveform.cpp  custom_waveform.cpp  gaussian_waveform.cpp  sinusoidal_waveform.cpp  waveform.cpp
test/: CMakeLists.txt  example_fdtd_1d_cpml.cpp  test_1d_fdtd.cpp  test_2d_fdtd.cpp  test_3d_fdtd.cpp  test_antenna.cpp  test_fftw.cpp  test_grid.cpp  test_lumped_element_fdtd.cpp  test_network.cpp  test_shape.cpp  test_source.cpp  test_tensor.cpp  test_thin_wire.cpp  test_xtensor.cpp
