add_executable(test_2d_fdtd test_2d_fdtd.cpp)
add_executable(test_3d_fdtd test_3d_fdtd.cpp)
add_executable(test_xtensor test_xtensor.cpp)
add_executable(test_lumped_element_fdtd test_lumped_element_fdtd.cpp)
add_executable(test_network test_network.cpp)
add_executable(test_antenna test_antenna.cpp)
add_executable(test_thin_wire test_thin_wire.cpp)

target_link_libraries(test_2d_fdtd PRIVATE xfdtd)
target_link_libraries(test_3d_fdtd PRIVATE xfdtd)
target_link_libraries(test_xtensor PRIVATE xtensor ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
target_link_libraries(test_lumped_element_fdtd PRIVATE xfdtd)
target_link_libraries(test_network PRIVATE xfdtd)
target_link_libraries(test_antenna PRIVATE xfdtd)
target_link_libraries(test_thin_wire PRIVATE xfdtd)